manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wrkcodes-docs
  name: wrkcodes-docs-service
spec:
  ports:
  - port: 80
    name: high
    protocol: TCP
    targetPort: 8080
  selector:
    app: wrkcodes-docs
